---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Made it so recipes that are marked as done in the compact subfactory view are greyed out
  Bugfixes:
    - Fixed an issue where pasting onto a module could make it exceed the total module capacity of the machine

---------------------------------------------------------------------------------------------------
Version: 1.1.50
Date: 05. 06. 2022
  Changes:
    - Added a command to restart translation in case it hangs; Type '/fp-restart-translation' into the console to run it
    - Changed it so the selected subfactory is retained during migrations if possible
  Bugfixes:
    - Fixed a few issues and crashes related to editing modules on machines and beacons
    - Fixed a couple of migration issues when trying to load certain old saves
    - Fixed a crash when loading a save where a now invalid subfactory was selected
    - Fixed a crash when trying to put machines into the cursor that can't be blueprinted
    - Fixed a missing locale string

---------------------------------------------------------------------------------------------------
Version: 1.1.49
Date: 27. 05. 2022
  Bugfixes:
    - Changes a keyboard shortcut that was interferring with game functionality
    - Fixed fuel not being shown in the compact view
    - Fixed a few minor UI issues related to the production table
    - Fixed a minor rounding issue with compact view machines
    - Fixed an issue where disabling lines on subfloors wouldn't work
    - Fixed an issue where the module slider wouldn't be properly draggable

---------------------------------------------------------------------------------------------------
Version: 1.1.48
Date: 24. 05. 2022
  Changes:
    - Re-added the 'put into cursor' action to the main interface (bound to a simple left click on machines and beacons)
  Bugfixes: