@@ -4,7 +4,8 @@ Date: 00. 00. 0000
   Features:
     -
   Changes:
-    - Made it so recipes that are marked as done in the compact subfactory view are greyed out
+    - Marking recipes as done in the compact subfactory view now grays them out
+    - Duplicating a subfactory now inserts it right below the cloned subfactory instead of at the end
   Bugfixes:
     - Fixed an issue where pasting onto a module could make it exceed the total module capacity of the machine
 
